RESOLVED FIXED299382
[JSC] Fix invalid regExpObjectNode in DFG strength reduction
https://bugs.webkit.org/show_bug.cgi?id=299382
Summary [JSC] Fix invalid regExpObjectNode in DFG strength reduction
Yijia Huang
Reported 2025-09-23 10:12:16 PDT
Attachments
Yijia Huang
Comment 1 2025-09-23 10:18:21 PDT
EWS
Comment 2 2025-09-23 19:19:52 PDT
Committed 300440@main (eeb65e05095b): <https://commits.webkit.org/300440@main> Reviewed commits have been landed. Closing PR #51204 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.