[JSC] Fix invalid regExpObjectNode in DFG strength reduction https://bugs.webkit.org/show_bug.cgi?id=299382 rdar://161080972

Reviewed by Yusuke Suzuki.

In DFG strength reduction phase, we should ensure regExpObjectNode
is a valid node.

Canonical link: https://commits.webkit.org/300440@main